<resources>
    <string name="app_name">Knjiza</string>
    <string name="datoteka_citati">ShranjeniCitati.json</string>
    <string name="datoteka_kazala">ShranjenaKazala.json</string>
    <string name="datoteka_knjiga">ShranjeneKnjige.json</string>
    <string name="text_kazalo">Kazalo</string>
    <string name="text_citati">Citati</string>
    <string name="text_slikaj">Slikaj</string>
    <string name="text_pretvori">Pretvori</string>
    <string name="text_izberi">Izberi</string>
    <string name="text_shrani">Shrani</string>
    <string name="text_knjige">Prebrane knjige</string>
    <string name="text_citat">Citat</string>
    <string name="text_naslov">Naslov</string>
    <string name="text_avtor">Avtor</string>
    <string name="text_stran">Stran</string>
    <string name="text_naslov_citat">Shranjeno</string>
    <string name="text_sporocilo_citat">Citat je shranjen.</string>
    <string name="text_sporocilo_kazalo">Kazalo je shranjeno.</string>
    <string name="text_sporocilo_knjiga">Prebrana knjiga je shranjena.</string>
    <string name="text_naslov_kazalo">Dodaj kazalo strani</string>
    <string name="text_naslov_knjiga">Dodaj prebrano knjigo</string>
    <string name="text_naslov_citati_knjige">Drugi citati iz te knjige</string>
    <string name="navigacija_nazaj">Nazaj</string>
    <string name="navigacija_domov">Domov</string>
    <string name="navigacija_potrdi">Ok</string>
    <string name="navigacija_potrdi_potrdi">Potrdi</string>
    <string name="navigacija_shrani">Shrani</string>
    <string name="navigacija_naprej">Naprej</string>
    <string name="navigacija_ponovi">Ponovno slikaj</string>
    <string name="navigacija_nadaljuj">Nadaljuj</string>
    <string name="navigacija_dodaj">Dodaj</string>
    <string name="navigacija_uredi">Uredi</string>
    <string name="navigacija_preklici">Prekliči</string>
    <string name="navigacija_nov_citat">Nov citat</string>
    <string name="zacasni_napis_komentar">Vpišite komentar. (opcijsko)</string>
    <string name="zacasni_napis_knjiga">Vpišite naslov knjige.</string>
    <string name="zacasni_napis_avtor">Vpišite ime avtorja.</string>
    <string name="zacasni_napis_leto">Vpišite letnico izzida. (opcijsko)</string>
    <string name="zacasni_napis_stran">Vpišite številko prebrane strani.</string>
    <string name="obvestilo_naslov_napaka">Napaka!</string>
    <string name="obvestilo_naslov_zavrzi">Pozor!</string>
    <string name="obvestilo_sporocilo_zavrzi">Spremembe niso shranjene in bodo izgubljene.</string>
    <string name="obvestilo_sporocilo_napaka_citat_prazno">Polje citat je prazno.\nVpišite citat.</string>
    <string name="obvestilo_sporocilo_napaka_citat_prazno_pretvori">Polje citat je prazno.\nPonovno slikajte citat.</string>
    <string name="obvestilo_sporocilo_napaka_citat_prazno_izberi">Polje citat je prazno.\nVpišite citat ali ga ponovno slikajte.</string>
    <string name="obvestilo_sporocilo_napaka_knjiga_prazno">Polje knjiga je prazno.\nVpišite naslov knjige.</string>
    <string name="obvestilo_sporocilo_napaka_avtor_prazno">Polje avtor je prazno.\nVpišite avtorja.</string>
    <string name="obvestilo_sporocilo_napaka_leto_prazno">Polje leto je prazno.\nVpišite leto izzida.</string>
    <string name="obvestilo_sporocilo_napaka_leto_predolgo">Polje leto je predolgo. Vpišite veljavno letnico.</string>
    <string name="obvestilo_sporocilo_napaka_leto_ni_stevilka">Polje leto ne vsebuje števila.</string>
    <string name="obvestilo_sporocilo_napaka_stran_prazno">Polje stran je prazno.\nVpišite številko prebrane strani knjige.</string>
    <string name="obvestilo_sporocilo_napaka_stran_ni_stevilka">Polje stran ne vsebuje števila.</string>



</resources>