<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/polje_knjiga_knjiga"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/zacasni_napis_knjiga"
        android:inputType="text"
        android:layout_weight="1" />
    <EditText
        android:id="@+id/polje_avtor_knjiga"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/zacasni_napis_avtor"
        android:inputType="text"
        android:layout_weight="1" />
    <EditText
        android:id="@+id/polje_leto_knjiga"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/zacasni_napis_leto"
        android:inputType="text"
        android:layout_weight="1" />

</LinearLayout>