<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_ozadje"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/naslov_obvestila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="15dp"
            android:text="@string/text_naslov_citat" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sporocilo_obvestila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/text_sporocilo_citat" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_obvestilo_shrani_nazaj"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="0dp"
            android:padding="11dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/arrow_back_24"
            android:text="@string/navigacija_nazaj"
            style="@style/gumbiStil" />
        <Button
            android:id="@+id/btn_obvestilo_shrani_domov"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="0dp"
            android:padding="11dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_24"
            android:text="@string/navigacija_domov"
            style="@style/gumbiStil" />
        <Button
            android:id="@+id/btn_obvestilo_shrani_citat"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="0dp"
            android:padding="11dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/speaker_notes"
            android:text="@string/navigacija_nov_citat"
            style="@style/gumbiStil" />
    </LinearLayout>
</LinearLayout>