<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ozadjeAplikacije"
    tools:context=".MainActivity">

    <!--Zgornja navigacijska vrstica: ime strani-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_app_bar_menu"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/top_navigacija_ozadje"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <!--Vsebina aplikacije-->
    <LinearLayout
        android:id="@+id/vsebina_aplikacije"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_menu"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--Zgornje okno vsebine-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/polje_besedilo_shrani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <!--Spodnje okno vsebine-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/polje_knjiga_shrani"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/zacasni_napis_knjiga"
                    android:inputType="text"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/polje_avtor_shrani"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/zacasni_napis_avtor"
                    android:inputType="text"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/polje_leto_shrani"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/zacasni_napis_leto"
                    android:inputType="text"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_s_shrani"
                    android:layout_width="50dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/save_24"
                    android:text="@string/navigacija_shrani"
                    style="@style/gumbiStil" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--Spodnja navigacijska vrstica: nazaj, domov, potrdi-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_app_bar_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_navigacija_ozadje"
        app:itemIconTint="@color/bottom_navigacija_barve"
        app:itemTextColor="@color/bottom_navigacija_barve"
        app:enableEdgeToEdge="false"
        app:itemActiveIndicatorStyle="@style/brezIndikatorjaAktivnosti"
        app:labelVisibilityMode="labeled"
        app:itemHorizontalTranslationEnabled="false"
        app:menu="@menu/bottom_navigacija"
        app:layout_constraintTop_toBottomOf="@id/vsebina_aplikacije"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

