<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:material3="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ozadjeAplikacije"
    tools:context=".MainActivity">

    <!--Zgornja navigacijska vrstica: ime strani-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_app_bar_menu"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/top_navigacija_ozadje"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <!--Vsebina aplikacije-->
    <LinearLayout
        android:id="@+id/vsebina_aplikacije"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_menu"
        app:layout_constraintBottom_toTopOf="@id/bottom_app_bar_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--Zgornje okno vsebine-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:src="@drawable/knjiza_odprta_slika"/>
        </LinearLayout>

        <!--Spodnje okno vsebine-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_m_citati"
                        android:layout_width="0dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="0dp"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/speaker_notes"
                        android:text="@string/text_citati"
                        style="@style/gumbiStil" />

                    <Button
                        android:id="@+id/btn_m_kazalo"
                        android:layout_width="0dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp"
                        android:padding="15dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/book_24"
                        android:text="@string/text_kazalo"
                        style="@style/gumbiStil" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_m_slikaj"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_margin="10dp"
                        android:padding="15dp"
                        android:drawableTop="@drawable/photo_camera_24"
                        android:text="@string/text_slikaj"
                        style="@style/gumbiStil"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--Spodnja navigacijska vrstica: nazaj, domov, potrdi-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_app_bar_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_navigacija_ozadje"
        app:itemIconTint="@color/bottom_navigacija_barve"
        app:itemTextColor="@color/bottom_navigacija_barve"
        app:enableEdgeToEdge="false"
        app:itemActiveIndicatorStyle="@style/brezIndikatorjaAktivnosti"
        app:labelVisibilityMode="labeled"
        app:itemHorizontalTranslationEnabled="false"
        app:menu="@menu/bottom_navigacija"
        app:layout_constraintTop_toBottomOf="@id/vsebina_aplikacije"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
